# onepaisa

./: .gitignore  Makefile  Onepaisa_Guide.md  README.md  prompt.txt  pyproject.toml
.github/workflows/: python-publish.yml
docs/: prompt_templates.md
examples/: demo_data.sh
examples/mappings/: sample_bank_mapping.json
onepaisa/: __main__.py  cli.py  db.py  models.py
onepaisa.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_ask.py  test_db.py  test_loans.py  test_repay_matching.py
