[project]
name = "onepaisa"
version = "0.1.1"
description = "Personal Finance CLI for lending/borrowing"
authors = [{ name = "Abdul Basit Memon", email = "your.email@example.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["click", "rich"]
[project.optional-dependencies]
dev = ["pytest", "build", "twine"]
[project.scripts]
onepaisa = "onepaisa.__main__:main"
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"